# seminstruct

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.semserve  Dockerfile.shimmy  QUICKSTART.md  README.md  Taskfile.yml  docker-compose.ci.yml  docker-compose.yml
.github/workflows/: ci.yml
src/: main.rs  main.rs.bak
